<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">HMCL-PE</string>
    <string name="app_full_name" translatable="false">Hello Minecraft! Launcher : Pocket Edition</string>
    <string name="app_name_pri" translatable="false">Hello Minecraft! Launcher</string>
    <string name="app_name_sec" translatable="false">Pocket Edition</string>
    <string name="version_name" translatable="false">v1.0.0</string>
    <string name="app_bar_title" translatable="false">Hello Minecraft! Launcher Pocket Edition v1.0.0</string>
    <string name="dialog_unknown_error_title">警告</string>
    <string name="dialog_unknown_error_msg">启动器遇到无法处理的错误，请联系开发者解决。</string>
    <string name="dialog_unknown_error_positive">确定</string>
    <string name="import_control_label">导入控制布局方案</string>
    <string name="storage_permissions_remind">请授予启动器读写权限，否则可能无法正常运行</string>
    <string name="loading_title">欢迎使用</string>
    <string name="loading_hint">加载中…</string>
    <string name="loading_hint_setting">正在检查配置文件…</string>
    <string name="loading_hint_plugin">正在检查启动器补丁…</string>
    <string name="loading_hint_control">正在检查启动器控制布局…</string>
    <string name="loading_hint_lib">正在检查游戏本地库…</string>
    <string name="loading_hint_java_8">正在检查 Java 8…</string>
    <string name="loading_hint_select">选择 Java 17 安装方式</string>
    <string name="loading_hint_download">下载安装</string>
    <string name="loading_hint_local">本地安装</string>
    <string name="loading_hint_java_17">正在检查 Java 17…</string>
    <string name="loading_hint_java_17_select">请选择…</string>
    <string name="loading_hint_java_17_check">正在检查文件…</string>
    <string name="loading_hint_java_17_error">请选择官方提供的 Java 17 文件，如果你没有此文件，请加入官方群获取</string>
    <string name="loading_hint_java_17_get">正在获取 Java 17 链接…</string>
    <string name="loading_hint_java_17_install">正在下载 Java 17…</string>
    <string name="loading_hint_java_17_download_failed">下载失败，请重试</string>
    <string name="loading_hint_java_17_unzip">正在解压 Java 17…</string>
    <string name="loading_hint_ready">准备就绪，即将进入启动器…</string>
    <string name="loading_hint_failed">核心资源安装/更新失败，请检查网络并重启应用，如果无效，请联系开发者</string>
    <string name="launcher_scroll_text_account">账户</string>
    <string name="launcher_scroll_account_name">没有游戏账户</string>
    <string name="launcher_scroll_account_state">点击此处添加账户</string>
    <string name="launcher_scroll_text_game">游戏</string>
    <string name="launcher_scroll_game_manager">没有游戏版本</string>
    <string name="launcher_scroll_game_none">进入下载页安装游戏</string>
    <string name="launcher_scroll_version_list">版本列表</string>
    <string name="launcher_scroll_download">下载</string>
    <string name="launcher_scroll_text_universal">通用</string>
    <string name="launcher_scroll_multi_player">多人联机</string>
    <string name="launcher_scroll_setting">设置</string>
    <string name="launcher_button_launch">启动游戏</string>
    <string name="launcher_button_current_version">没有游戏版本</string>
    <string name="launcher_spinner_text">▲</string>
    <string name="launch_check_dialog_title">启动游戏</string>
    <string name="launch_check_dialog_java">检测 Java 版本</string>
    <string name="launch_check_dialog_lib">处理游戏依赖</string>
    <string name="launch_check_dialog_login">登录</string>
    <string name="launch_check_dialog_launch">等待游戏启动</string>
    <string name="launch_check_dialog_cancel">取消</string>
    <string name="launch_check_dialog_exception_error_java">错误的 Java 版本</string>
    <string name="launch_check_dialog_exception_assets_failed">资源文件下载失败，请检查网络并重新安装该版本</string>
    <string name="launch_check_dialog_exception_lib_failed">当前版本缺少必要文件，请检查网络并重新安装该版本</string>
    <string name="launch_check_dialog_exception_no_account">请先添加一个用户</string>
    <string name="launch_check_dialog_exception_no_game">没有可启动的游戏，你可以点击左侧边栏内的下载按钮安装游戏</string>
    <string name="launch_failed_dialog_title">启动失败</string>
    <string name="launch_failed_dialog_positive">确定</string>
    <string name="account_ui_title">账户列表</string>
    <string name="account_scroll_add_account">添加账户</string>
    <string name="account_offline_login">离线模式</string>
    <string name="account_mojang_login">Mojang 账号</string>
    <string name="account_microsoft_login">微软账户</string>
    <string name="account_external_login">添加认证服务器</string>
    <string name="account_external_login_hint">外置登录</string>
    <string name="account_refresh_exception_network">刷新失败，请检查网络</string>
    <string name="account_server_type">选择认证服务器类型</string>
    <string name="account_auth_lib_injector">皮肤站 (authlib-injector)</string>
    <string name="account_nide_8_auth">统一通行证 (nide8auth)</string>
    <string name="dialog_add_account_title">添加账户</string>
    <string name="dialog_add_account_type_offline">离线模式</string>
    <string name="dialog_add_account_type_microsoft">微软账户</string>
    <string name="dialog_add_account_type_external">外置登录</string>
    <string name="dialog_add_account_login">登录</string>
    <string name="dialog_add_account_cancel">取消</string>
    <string name="dialog_add_offline_account_title">添加离线模式账户</string>
    <string name="dialog_add_offline_account_name">用户名</string>
    <string name="dialog_add_offline_account_purchase"><a href='https://www.minecraft.net/zh-hans/store/minecraft-java-edition'>购买 Minecraft</a></string>
    <string name="dialog_add_offline_account_advance">高级设置</string>
    <string name="dialog_add_offline_account_uuid">UUID</string>
    <string name="dialog_add_offline_account_hint">警告</string>
    <string name="dialog_add_offline_account_hint_text">UUID 是 Minecraft 对玩家角色的唯一标识符，每个启动器生成 UUID 的方式可能不同。通过修改 UUID 选项至原启动器所生成的 UUID，你可以保证在切换启动器后，游戏还能将你的游戏角色识别为给定 UUID 所对应的角色，从而保留原来角色的背包物品。UUID 选项为高级选项，除非你知道你在做什么，否则你不需要调整该选项。</string>
    <string name="dialog_add_offline_account_login">登录</string>
    <string name="dialog_add_offline_account_cancel">取消</string>
    <string name="dialog_add_offline_account_empty_warn">用户名不得为空</string>
    <string name="dialog_add_offline_account_exist_warn">当前用户已存在，无法重复添加</string>
    <string name="dialog_add_mojang_account_title">添加 Mojang 账户</string>
    <string name="dialog_add_mojang_account_email">用户名</string>
    <string name="dialog_add_mojang_account_password">密码</string>
    <string name="dialog_add_mojang_account_purchase"><a href='https://www.minecraft.net/zh-hans/store/minecraft-java-edition'>购买 Minecraft</a></string>
    <string name="dialog_add_mojang_account_help"><a href='https://help.minecraft.net/hc/en-us/articles/360050865492-JAVA-Account-Migration-FAQ'>迁移至微软账户</a></string>
    <string name="dialog_add_mojang_account_migrate"><a href='https://www.minecraft.net/zh-hans/login?return_url=/zh-hans/profile'>迁移至微软账户</a></string>
    <string name="dialog_add_mojang_account_login">登录</string>
    <string name="dialog_add_mojang_account_cancel">取消</string>
    <string name="dialog_add_mojang_account_empty_warn">用户名或密码不得为空</string>
    <string name="dialog_add_mojang_account_exist_warn">当前用户已存在，无法重复添加</string>
    <string name="dialog_add_mojang_account_failed">登录失败，无效的用户名或密码</string>
    <string name="dialog_add_microsoft_account_title">添加微软账户</string>
    <string name="dialog_add_microsoft_account_hint">提示</string>
    <string name="dialog_add_microsoft_account_hint_text">您需要点击登录按钮，并在新打开的浏览器窗口中完成登录。</string>
    <string name="dialog_add_microsoft_account_purchase"><a href='https://www.minecraft.net/zh-hans/store/minecraft-java-edition'>购买 Minecraft</a></string>
    <string name="dialog_add_microsoft_account_help"><a href='https://support.microsoft.com/zh-cn/account-billing/%E5%A6%82%E4%BD%95%E6%9B%B4%E6%94%B9-microsoft-%E5%B8%90%E6%88%B7%E4%B8%8A%E7%9A%84%E5%87%BA%E7%94%9F%E6%97%A5%E6%9C%9F-837badbc-999e-54d2-2617-d19206b9540a'>如何修改账户出生日期</a></string>
    <string name="dialog_add_microsoft_account_setting"><a href='https://account.live.com/editprof.aspx'>账户设置页</a></string>
    <string name="dialog_add_microsoft_account_login">登录</string>
    <string name="dialog_add_microsoft_account_cancel">取消</string>
    <string name="dialog_add_authlib_injector_account_title">添加外置登录账户 (authlib-injector)</string>
    <string name="dialog_add_authlib_injector_account_server">认证服务器</string>
    <string name="dialog_add_authlib_injector_account_email">用户名</string>
    <string name="dialog_add_authlib_injector_account_password">密码</string>
    <string name="dialog_add_authlib_injector_account_sign_up">注册</string>
    <string name="dialog_add_authlib_injector_account_login">登录</string>
    <string name="dialog_add_authlib_injector_account_cancel">取消</string>
    <string name="dialog_add_authlib_injector_account_server_warn">尚未添加或选择认证服务器</string>
    <string name="dialog_add_authlib_injector_account_empty_warn">用户名或密码不得为空</string>
    <string name="dialog_add_authlib_injector_account_exist_warn">当前用户已存在，无法重复添加</string>
    <string name="dialog_add_authlib_injector_account_failed">登录失败，无效的用户名或密码</string>
    <string name="dialog_add_authlib_injector_account_none">该帐号没有角色</string>
    <string name="dialog_upload_skin_failed">皮肤上传失败</string>
    <string name="dialog_upload_skin_invalid_skin">无法识别的皮肤文件</string>
    <string name="dialog_relogin_title">请输入您的密码</string>
    <string name="dialog_relogin_hint">密码</string>
    <string name="dialog_relogin_positive">确定</string>
    <string name="dialog_relogin_negative">取消</string>
    <string name="dialog_add_verify_server_nide_title">添加认证服务器（统一通行证）</string>
    <string name="dialog_add_verify_server_nide_hint">32 位服务器 ID</string>
    <string name="dialog_add_verify_server_nide_cancel">取消</string>
    <string name="dialog_add_verify_server_nide_next">下一步 ></string>
    <string name="dialog_add_verify_server_nide_empty">服务器 ID 不合法</string>
    <string name="dialog_add_verify_server_nide_invalid">无法连接认证服务器，可能是网络故障或 ID 输入错误</string>
    <string name="dialog_add_verify_server_nide_url">服务器地址</string>
    <string name="dialog_add_verify_server_nide_name">服务器名称</string>
    <string name="dialog_add_verify_server_nide_positive">完成</string>
    <string name="dialog_add_verify_server_nide_back">&#60; 上一步</string>
    <string name="dialog_add_verify_server_title">添加认证服务器</string>
    <string name="dialog_add_verify_server_hint">服务器地址</string>
    <string name="dialog_add_verify_server_cancel">取消</string>
    <string name="dialog_add_verify_server_next">下一步 ></string>
    <string name="dialog_add_verify_server_empty">服务器地址不得为空</string>
    <string name="dialog_add_verify_server_invalid">无法连接认证服务器，可能是网络故障或 URL 输入错误</string>
    <string name="dialog_add_verify_server_url">服务器地址</string>
    <string name="dialog_add_verify_server_name">服务器名称</string>
    <string name="dialog_add_verify_server_positive">完成</string>
    <string name="dialog_add_verify_server_back">&#60; 上一步</string>
    <string name="dialog_offline_skin_title">皮肤</string>
    <string name="dialog_offline_skin_default">默认</string>
    <string name="dialog_offline_skin_steve">Steve</string>
    <string name="dialog_offline_skin_alex">Alex</string>
    <string name="dialog_offline_skin_local">本地皮肤图片文件</string>
    <string name="dialog_offline_skin_little_skin">LittleSkin</string>
    <string name="dialog_offline_skin_blessing_skin">Blessing Skin 服务器</string>
    <string name="dialog_offline_skin_local_skin">皮肤</string>
    <string name="install_package_ui_install">安装</string>
    <string name="install_package_ui_description">整合包描述</string>
    <string name="install_package_ui_version">版本</string>
    <string name="install_package_ui_author">作者</string>
    <string name="install_package_ui_package_name">整合包名称</string>
    <string name="install_package_ui_name">名称</string>
    <string name="install_package_ui_thi_title">将会安装整合包</string>
    <string name="install_package_ui_online_sub">需要提供整合包的下载链接</string>
    <string name="install_package_ui_online">从互联网下载整合包</string>
    <string name="install_package_ui_local">导入本地整合包文件</string>
    <string name="install_package_ui_local_sub">点击选择本地文件</string>
    <string name="install_package_ui_sub_title">安装整合包</string>
</resources>